tidy/ui/redef.stderr
error[E0008]: the name: `foo` is defined multiple times
   ╭─[redef.src:1:1]
   │
 1 │ fn foo() {}
 2 │ fn foo() {}
   │ ^^^^^^^╮  
   │        ╰── `foo` redefined here
───╯
error: aborting due to previous error
